--- a/templates/post.latex
+++ b/templates/post.latex
@@ -497,7 +497,7 @@ $endfor$
 $endif$
 
 $if(title)$
-\title{\Large\textbf{$title$} \\ \large{$subtitle$}\vspace{0pt}}
+\title{\huge\textbf{$title$} \\ \large{$subtitle$}\vspace{2pt}}
 $endif$
 $if(subtitle)$
 \providecommand{\subtitle}[1]{}
@@ -512,7 +512,7 @@ $if(institute)$
 \institute{$for(institute)$$institute$$sep$ \and $endfor$}
 $endif$
 
-\date{\normalsize\vspace{-5pt}\textsl{$date$}}
+\date{\normalsize\vspace{-6pt}\textsl{$date$}}
 % \date{}
 
 $if(beamer)$
