Add shell.nix, start rust post

--- a/templates/post.latex
+++ b/templates/post.latex
@@ -41,6 +41,7 @@
 \usepackage{relsize}
 \usepackage{amsfonts}
 \usepackage{listings}
+\usepackage{listings-rust}
 \usepackage{xcolor}
 \usepackage{enumitem}
 \usepackage{caption}
