Fix rust style in latex via lua filter

--- a/templates/post.latex
+++ b/templates/post.latex
@@ -323,6 +323,7 @@ $if(beamer)$
 $endif$
 $if(listings)$
 \usepackage{listings}
+\usepackage{listings-rust}
 \newcommand{\passthrough}[1]{#1}
 $endif$
 $if(lhs)$
